# bookstore

./: .gitignore  Dockerfile  Makefile  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
bookstore/templates/: hello_world.html
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/tests/: factories.py  test_order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category.py
product/models/: category.py  product.py
product/tests/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
