[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Kayky Dion <kayky.dion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.2.8"
django-rest-framework = "^0.1.0"
django-extensions = "^3.1.3"
django-debug-toolbar = "^3.2.2"
psycopg2-binary = "^2.9.2"
pytest = "^6.2.5"
factory-boy = "^3.2.0"
flake8 = "^4.0.1"
whitenoise = "^5.3.0"
gunicorn = "^23.0.0"
gitpython = "^3.1.37"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
